--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "block-puzzle-solver",
     "version": "1.0.0",
     "description": "",
+     "scripts": {
+        "build": "echo \"No build specified\" && exit 1",
+        "test": "echo \"No test specified\" && exit 1",
+        "start": "echo \"starting\" && exit 1"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/kifni41/block-puzzle-solver.git"
