--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "description": "",
      "scripts": {
-        "build": "echo \"No build specified\" && exit 1",
-        "test": "echo \"No test specified\" && exit 1",
-        "start": "echo \"starting\" && exit 1"
+        "build": "echo \"No build specified\"",
+        "test": "echo \"No test specified\"",
+        "start": "echo \"starting\""
     },
     "repository": {
         "type": "git",
